# coursera-courses-eda

./: .gitignore  CourseraEDA.ipynb  LICENSE  LICENSE.txt  README.md  README.txt  pyproject.toml  requirements.txt
notebooks/: coursera_courses.ipynb
src/coursera_courses_eda/: utils.py
tests/: test_utils.py
