[tool.poetry]
name = "coursera-courses-eda"
version = "0.1.0"
description = ""
authors = ["Vytautas Bunevičius"]
readme = "README.md"
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.12"
appnope = "0.1.4"
asttokens = "2.4.1"
comm = "0.2.2"
contourpy = "1.3.0"
cycler = "0.12.1"
debugpy = "1.8.7"
decorator = "5.1.1"
executing = "2.1.0"
fonttools = "4.54.1"
ipykernel = "6.29.5"
ipython = "8.29.0"
jedi = "0.19.1"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
kiwisolver = "1.4.7"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
nest-asyncio = "1.6.0"
numpy = "2.1.2"
packaging = "24.1"
pandas = "2.2.3"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "11.0.0"
platformdirs = "4.3.6"
prompt-toolkit = "3.0.48"
psutil = "6.1.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pygments = "2.18.0"
pyparsing = "3.2.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
pyzmq = "26.2.0"
seaborn = "0.13.2"
setuptools = "75.3.0"
six = "1.16.0"
stack-data = "0.6.3"
tornado = "6.4.1"
traitlets = "5.14.3"
tzdata = "2024.2"
wcwidth = "0.2.13"
wheel = "0.44.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
